2006-08-05  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (w32_valid_pointer_p): New function.

	* w32.h: Add prototype for w32_valid_pointer_p.

	* alloc.c: Include w32.h.
	(valid_lisp_object_p) [WINDOWSNT]: Call w32_valid_pointer_p to do
	the job.

	* keyboard.c (kbd_buffer_get_event): Return Qnil when current time
	is exactly equal to end_time, not only when it is past that.

2006-08-04  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (read_char): Rebalance specpdl after receiving jump.

	* process.c: Reapply 2006-08-01 change.

2006-08-04  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (w32_query_font): Fix last change: use stricmp.

2006-08-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* editfns.c (Fsubst_char_in_region): Redo the setup work after running
	the before-change-functions since they may have altered the buffer.

2006-08-04  Ralf Angeli  <angeli@caeruleus.net>

	* w32fns.c (w32_createwindow): Handle -geometry command line option
	and the geometry settings in the Registry.

2006-08-04  Kenichi Handa  <handa@m17n.org>

	* w32fns.c (w32_query_font): Compare names by ignoring case.

	* xterm.c (x_query_font): Compare names by ignoring case.

2006-08-03  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (w32_menu_show, w32_dialog_show): Call Fsignal to quit
	when no option selected.

2006-08-03  Chong Yidong  <cyd@stupidchicken.com>

	* process.c: Revert last change.

2006-08-01  Kim F. Storm  <storm@cua.dk>

	* process.c (wait_reading_process_output_unwind): New function.
	Restores waiting_for_user_input_p to saved value.
	(wait_reading_process_output): Unwind protect waiting_for_user_input_p
	instead of save/restore old value on stack.

2006-07-30  Thien-Thi Nguyen  <ttn@gnu.org>

	* editfns.c: Undo 2006-06-27 change.

2006-07-29  Eli Zaretskii  <eliz@gnu.org>

	* coding.c (Ffind_operation_coding_system): Revert the change from
	2006-05-29.

	* alloc.c [WINDOWSNT]: Include fcntl.h, to fix last change.

2006-07-28  Richard Stallman  <rms@gnu.org>
