@@ -1,3 +1,9 @@
+2006-08-06  Chong Yidong  <cyd@stupidchicken.com>
+
+	* buffer.c (Vchange_major_mode_hook, Qchange_major_mode_hook): New vars.
+	(Fkill_all_local_variables): Use it.
+	(syms_of_buffer): Defvar it.
+
 2006-08-05  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32.c (w32_valid_pointer_p): New function.
